增加注册中心

--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=9090
 
+spring.application.name=hello-service
+
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
 management.endpoints.web.exposure.include=*
 
 info.app.name=spring-boot
